--- a/css/main.css
+++ b/css/main.css
@@ -1245,6 +1245,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 0.75rem;
 }
 
+.mr-1{
+  margin-right: 0.25rem;
+}
+
 .mr-2{
   margin-right: 0.5rem;
 }
@@ -1377,6 +1381,10 @@ h1, h2, h3, h4, h5, h6 {
   height: 70vh;
 }
 
+.h-\[80vh\]{
+  height: 80vh;
+}
+
 .h-auto{
   height: auto;
 }
@@ -1391,6 +1399,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .max-h-\[90vh\]{
   max-height: 90vh;
+}
+
+.min-h-\[80vh\]{
+  min-height: 80vh;
 }
 
 .w-1{
@@ -1870,11 +1882,6 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
 }
 
-.bg-warning{
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 119 6 / var(--tw-bg-opacity, 1));
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
@@ -2071,6 +2078,14 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 2rem;
 }
 
+.pb-12{
+  padding-bottom: 3rem;
+}
+
+.pt-24{
+  padding-top: 6rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -2115,6 +2130,11 @@ h1, h2, h3, h4, h5, h6 {
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-base{
@@ -2188,6 +2208,11 @@ h1, h2, h3, h4, h5, h6 {
 .text-accent{
   --tw-text-opacity: 1;
   color: rgb(234 88 12 / var(--tw-text-opacity, 1));
+}
+
+.text-blue-100{
+  --tw-text-opacity: 1;
+  color: rgb(219 234 254 / var(--tw-text-opacity, 1));
 }
 
 .text-error{
@@ -2338,6 +2363,10 @@ h1, h2, h3, h4, h5, h6 {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-200{
+  transition-duration: 200ms;
 }
 
 .duration-300{
@@ -2565,6 +2594,11 @@ h1, h2, h3, h4, h5, h6 {
   --tw-ring-color: rgb(234 88 12 / var(--tw-ring-opacity, 1));
 }
 
+.group:hover .group-hover\:rotate-180{
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .group:hover .group-hover\:scale-105{
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -2629,6 +2663,10 @@ h1, h2, h3, h4, h5, h6 {
     grid-column: span 2 / span 2;
   }
 
+  .md\:mt-12{
+    margin-top: 3rem;
+  }
+
   .md\:block{
     display: block;
   }
@@ -2656,6 +2694,21 @@ h1, h2, h3, h4, h5, h6 {
   .md\:gap-y-0{
     row-gap: 0px;
   }
+
+  .md\:p-6{
+    padding: 1.5rem;
+  }
+
+  .md\:text-body-lg{
+    font-size: 1.125rem;
+    line-height: 1.6;
+  }
+
+  .md\:text-hero{
+    font-size: 3.5rem;
+    line-height: 1.1;
+    letter-spacing: -0.02em;
+  }
 }
 
 @media (min-width: 1024px){
@@ -2665,6 +2718,22 @@ h1, h2, h3, h4, h5, h6 {
 
   .lg\:col-span-2{
     grid-column: span 2 / span 2;
+  }
+
+  .lg\:block{
+    display: block;
+  }
+
+  .lg\:hidden{
+    display: none;
+  }
+
+  .lg\:h-\[70vh\]{
+    height: 70vh;
+  }
+
+  .lg\:min-h-\[70vh\]{
+    min-height: 70vh;
   }
 
   .lg\:grid-cols-1{
@@ -2681,6 +2750,10 @@ h1, h2, h3, h4, h5, h6 {
 
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
   }
 
   .lg\:px-8{
