--- a/css/main.css
+++ b/css/main.css
@@ -613,6 +613,17 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+#pdf-modal.modal-open{
+  pointer-events: auto;
+  opacity: 1;
+}
+
+#pdf-modal.modal-open > div{
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .carousel-slide{
   transition-property: opacity;
   transition-duration: 1000ms;
@@ -1143,10 +1154,6 @@ h1, h2, h3, h4, h5, h6 {
   right: 1rem;
 }
 
-.right-5{
-  right: 1.25rem;
-}
-
 .right-8{
   right: 2rem;
 }
@@ -1175,8 +1182,12 @@ h1, h2, h3, h4, h5, h6 {
   top: 1rem;
 }
 
-.top-5{
-  top: 1.25rem;
+.-bottom-4{
+  bottom: -1rem;
+}
+
+.-right-4{
+  right: -1rem;
 }
 
 .z-10{
@@ -1245,8 +1256,12 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 0.75rem;
 }
 
-.mr-1{
-  margin-right: 0.25rem;
+.ml-auto{
+  margin-left: auto;
+}
+
+.mr-0{
+  margin-right: 0px;
 }
 
 .mr-2{
@@ -1377,12 +1392,8 @@ h1, h2, h3, h4, h5, h6 {
   height: 60vh;
 }
 
-.h-\[70vh\]{
-  height: 70vh;
-}
-
-.h-\[80vh\]{
-  height: 80vh;
+.h-\[90vh\]{
+  height: 90vh;
 }
 
 .h-auto{
@@ -1395,6 +1406,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .h-screen{
   height: 100vh;
+}
+
+.h-10{
+  height: 2.5rem;
 }
 
 .max-h-\[90vh\]{
@@ -1453,6 +1468,10 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
 }
 
+.w-10{
+  width: 2.5rem;
+}
+
 .max-w-2xl{
   max-width: 42rem;
 }
@@ -1471,6 +1490,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .max-w-7xl{
   max-width: 80rem;
+}
+
+.max-w-full{
+  max-width: 100%;
 }
 
 .max-w-md{
@@ -1505,11 +1528,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .translate-x-16{
   --tw-translate-x: 4rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[-20px\]{
-  --tw-translate-y: -20px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1595,6 +1613,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .gap-8{
   gap: 2rem;
+}
+
+.gap-x-12{
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
 }
 
 .gap-x-16{
@@ -1707,6 +1730,11 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 0.375rem;
 }
 
+.rounded-t-lg{
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -1802,11 +1830,6 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
-}
-
 .bg-error{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
@@ -1815,6 +1838,16 @@ h1, h2, h3, h4, h5, h6 {
 .bg-error-50{
   --tw-bg-opacity: 1;
   background-color: rgb(254 242 242 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity, 1));
 }
 
 .bg-primary{
@@ -2022,6 +2055,10 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 1.5rem;
 }
 
+.pb-12{
+  padding-bottom: 3rem;
+}
+
 .pb-3{
   padding-bottom: 0.75rem;
 }
@@ -2036,6 +2073,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .pl-8{
   padding-left: 2rem;
+}
+
+.pr-0{
+  padding-right: 0px;
 }
 
 .pr-10{
@@ -2066,6 +2107,10 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 5rem;
 }
 
+.pt-24{
+  padding-top: 6rem;
+}
+
 .pt-4{
   padding-top: 1rem;
 }
@@ -2076,14 +2121,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .pt-8{
   padding-top: 2rem;
-}
-
-.pb-12{
-  padding-bottom: 3rem;
-}
-
-.pt-24{
-  padding-top: 6rem;
 }
 
 .text-left{
@@ -2365,10 +2402,6 @@ h1, h2, h3, h4, h5, h6 {
   transition-duration: 150ms;
 }
 
-.duration-200{
-  transition-duration: 200ms;
-}
-
 .duration-300{
   transition-duration: 300ms;
 }
@@ -2506,6 +2539,12 @@ h1, h2, h3, h4, h5, h6 {
   --transition-quick: 200ms ease-in-out;
 }
 
+.hover\:scale-105:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:border-primary:hover{
   --tw-border-opacity: 1;
   border-color: rgb(30 58 138 / var(--tw-border-opacity, 1));
@@ -2592,11 +2631,6 @@ h1, h2, h3, h4, h5, h6 {
 .focus\:ring-accent:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(234 88 12 / var(--tw-ring-opacity, 1));
-}
-
-.group:hover .group-hover\:rotate-180{
-  --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .group:hover .group-hover\:scale-105{
@@ -2726,10 +2760,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .lg\:hidden{
     display: none;
-  }
-
-  .lg\:h-\[70vh\]{
-    height: 70vh;
   }
 
   .lg\:min-h-\[70vh\]{
