--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -14,6 +14,13 @@
 }
 
 @layer components {
+
+  #pdf-modal.modal-open {
+    @apply opacity-100 pointer-events-auto;
+  }
+  #pdf-modal.modal-open > div {
+    @apply scale-100;
+  }
   
   .carousel-slide {
     @apply transition-opacity duration-1000 ease-in-out; /* 1-second fade */
